# spider-snoop

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.older  README.md  TECHNICAL_FLOW.md  TEST_PLAN.md  agent_client.py  code_risk_training_data.csv  debug_db_count.py  debug_import.py  debug_scan_test.py  deploy.sh  deploy_remote.sh  dlp_agent.py  dlp_agent_v2.py  dlp_server.py  docker-compose.prod.yml  docker-compose.yml  generate_test_data.py  index.html  main.py  mcp_server.py  pyproject.toml  renew_cert.sh  requirements.txt  set_lifecycle.py  spidercob_spec.md  test_context_logic.py  test_file.html  test_output.txt  test_results.txt  test_scan.txt  test_vuln.txt  test_vuln_requirements.txt  theme.html  (+1 more)
alembic/: env.py
api/: index.py
app/: __init__.py  cdr_engine.py  config.py  database.py  dlp_engine.py  icap_server.py  main.py  worker.py
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
nginx/: nginx.conf  nginx.local.conf  nginx.react.conf
rules/: malware.yar
scripts/: backup_remote_db.sh  debug_osv.py  download_models.py  fix_users.py  generate_io_report.py  init_db.py  scan_public_repos.py  setup_runner.sh  train_code_risk_classifier.py  verify_rate_limit_local.py
tests/: conftest.py  test_ai_firewall.py  test_cdr.py  test_cdr_capabilities.py  test_code_risk.py  test_code_scanner.py  test_code_scanner_integration.py  test_code_security_integration.py  test_compliance.py  test_context_classifier.py  (+21 more)
(+123 files in other folders)
